tests/baselines/reference/commentsModules.errors.txt
commentsModules.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(10,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(41,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(41,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(48,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(48,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(48,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(55,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(55,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(55,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(56,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(64,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(64,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(64,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(66,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(73,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(73,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(74,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(81,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(81,11): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
commentsModules.ts(83,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== commentsModules.ts (21 errors) ====
    /** Module comment*/
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** b's comment*/
        export var b: number;
        /** foo's comment*/
        function foo() {
            return b;
        }
        /** m2 comments*/
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** class comment;*/
            export class c {
            };
            /** i*/
            export var i = new c();
        }
        /** exported function*/
        export function fooExport() {
            return foo();
        }
    
        // shouldn't appear
        export function foo2Export(/**hm*/ a: string) {
        }
    
        /** foo3Export
         * comment
         */
        export function foo3Export() {
        }
    
        /** foo4Export
         * comment
         */
        function foo4Export() {
        }
    } // trailing comment module
    m1.fooExport();
    var myvar = new m1.m2.c();
    /** module comment of m2.m3*/
    module m2.m3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** Exported class comment*/
        export class c {
        }
    } /* trailing dotted module comment*/
    new m2.m3.c();
    /** module comment of m3.m4.m5*/
    module m3.m4.m5 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                 ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** Exported class comment*/
        export class c {
        }
    } // trailing dotted module 2
    new m3.m4.m5.c();
    /** module comment of m4.m5.m6*/
    module m4.m5.m6 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                 ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m7 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** Exported class comment*/
            export class c {
            }
        } /* trailing inner module */ /* multiple comments*/
    }
    new m4.m5.m6.m7.c();
    /** module comment of m5.m6.m7*/
    module m5.m6.m7 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                 ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** module m8 comment*/
        export module m8 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** Exported class comment*/
            export class c {
            }
        }
    }
    new m5.m6.m7.m8.c();
    module m6.m7 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m8 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** Exported class comment*/
            export class c {
            }
        }
    }
    new m6.m7.m8.c();
    module m7.m8 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
              ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        /** module m9 comment*/
        export module m9 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            /** Exported class comment*/
            export class c {
            }
    
            /** class d */
            class d {
            }
    
            // class e
            export class e {
            }
        }
    }
    new m7.m8.m9.c();